# video-timeline-copilot

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SKILL.md  install.md  pyproject.toml
docs/: architecture.md  audio-analysis.md  e2e-test.md  fcpxml-audio.md  fcpxml.md  shorts-guidelines.md
examples/: README.md
helpers/: __init__.py  audio_refine.py  build_resolve_project.py  cli.py  common.py  draft_silence_cut.py  evaluate_edl.py  export_fcpxml.py  export_srt.py  import_fcpxml.py  installer.py  inventory.py  media_tools.py  pack_transcripts.py  qa_preview.py  render_fcpxml_preview.py  render_preview.py  resolve_env_check.py  separate_audio.py  timecode.py  timing.py  transcribe.py  transforms.py  update_fcpxml.py  update_resolve_timeline.py  validate_edl.py  video_analysis.py
plans/: 001-verification-baseline.md  002-fcpxml-rational-fps.md  003-srt-record-gaps.md  004-inventory-exclude-edit-outputs.md  005-consolidate-ffmpeg-discovery.md  006-silencedetect-parse-tests.md  007-agents-md-contributor-docs.md  008-preview-ffprobe-cache.md  009-fuzzy-repeat-detection-spike.md  010-fcpxml-layer-offset-and-asset-resources.md  011-fcpxml-layer-geometry.md  012-fcpxml-knowledge-doc-and-invariants.md  README.md
tests/: test_audio_refine.py  test_build_resolve_project.py  test_common.py  test_draft_silence_cut.py  test_evaluate_edl.py  test_export_fcpxml.py  test_export_srt.py  test_fcpxml_invariants.py  test_import_fcpxml.py  test_installer.py  test_inventory.py  test_media_tools.py  test_pack_transcripts.py  test_preview_qa.py  test_separate_audio.py  (+5 more)
(+5 files in other folders)
