[project]
name = "video-timeline-copilot"
version = "0.1.0"
description = "Transcript-first AI timeline generation with DaVinci Resolve project output"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
transcribe = ["faster-whisper>=1.1.0"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["helpers"]

[project.scripts]
vtc = "helpers.cli:main"

[tool.ruff]
target-version = "py310"
